Fix spacing and margin

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ html {
 .link-card {
   background-color: #dcd4cd;
   padding: 1rem;
+  padding-top: .5rem;
   border-width: 2px;
   border-radius: 3px;
   border-color: #9a816d;
@@ -28,6 +29,7 @@ h2 {
   font-family: 'Dosis', sans-serif;
   font-weight: bold;
   margin-top: 0;
+  margin-bottom: 0;
   font-size: 1.5rem;
 }
 
